fix: response user type
