# server/docs/swagger.json
@@ -374,7 +374,7 @@
                 "members": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.User"
+                        "$ref": "#/definitions/entity.DisplayUser"
                     }
                 },
                 "ownerId": {
@@ -525,30 +525,10 @@
                 "message": {}
             }
         },
-        "entity.Skill": {
+        "entity.DisplayUser": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.User": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
                 "description": {
-                    "type": "string"
-                },
-                "email": {
                     "type": "string"
                 },
                 "icon": {
@@ -559,8 +539,16 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "entity.Skill": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 },
-                "updatedAt": {
+                "name": {
                     "type": "string"
                 }
             }
